--- a/static/mini-player.css
+++ b/static/mini-player.css
@@ -73,14 +73,16 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: auto;
+    width: 100vw;
     max-width: 100vw;
-    margin: 0;
+    margin: 0 auto;
     padding-left: calc(16px + env(safe-area-inset-left, 0px));
     padding-right: calc(16px + env(safe-area-inset-right, 0px));
     padding-bottom: calc(12px + env(safe-area-inset-bottom, 0px));
     border-radius: 0;
     box-sizing: border-box;
+    position: fixed;
+    z-index: 999998;
     --mp-gap-top: 8px;
     --mp-gap-bottom: 0px;
     --mp-controls-gap: 0px;
